# fpv_fsim

./: .gitignore  ASSET_PIPELINE_DEMO_RESULTS.md  ASSET_PIPELINE_README.md  BUILD_SCRIPTS.md  CMakeLists.txt  DUAL_ASSET_SYSTEM.md  README.md  TRANSITION_COMPLETE_SUCCESS.md  XML_TO_JSON_TRANSITION_COMPLETE.md  build-clean.ps1  build.ps1  build.sh  clean-rebuild.ps1  clean.ps1  codemap.xml  codemap.yaml  current_flow.md  demo_pipeline.ps1  dump.ps1  flaws.ct.md  mismatch.md  out.md  run.ps1  run.sh  run_simple_test.ps1  run_test.ps1  simple_test.cpp  source.2025-09-17.ltxt  startup_log.txt  test_entity.cpp  test_entityconfig.cpp  test_entityfactory_3.h  test_entityfactory_minimal.h  test_eventbus.cpp  test_factory_ptr.cpp  test_include.cpp  test_json.cpp  test_minimal.cpp  test_world.cpp  test_worldgen.cpp
assets/entities/: flywoo-explorer-lr4-o4-pro.xml  simple_drone.xml  two-stage-rocket.xml
assets/schemas/: asset.xsd  entity.xsd  scene.xsd
build_tools/: CMakeLists.txt
build_tools/asset_compiler/: AssetCompiler.cpp  AssetCompiler.h  AssetCompiler_Original.cpp  AssetCompiler_Original.h  AssetCompiler_Simple.h  CMakeLists.txt  main.cpp  main_simple.cpp
build_tools/build_scripts/: build_assets.ps1  build_assets.sh
build_tools/codegen/: AssetIdGenerator.cpp  AssetIdGenerator.h  AssetIdGenerator_Original.cpp  AssetIdGenerator_Original.h  AssetIdGenerator_Simple.cpp  AssetIdGenerator_Simple.h  CMakeLists.txt  main.cpp  main_simple.cpp
configs/: entity_factory_config.json  entity_factory_config.xml  input_config.json  input_config.xml  physics_config.json  physics_config.xml  render_config.json  render_config.xml
configs/scenes/: default_sphere_world.xml  loading_indicator.xml  procedural_earth_like.xml  test_invalid.xml
docs/: 1.0-structure.md  1.1-toolchain.md  1.2-IoC.md  2.0-assets-and-packages.md  2.1-assets-logic.cd  2.1-assets-logic.md  2.2-default-assets.md  2.2.1-default-asset-impl.md  2.2.3-default-scene-supplement.md  2.3-dual-asset-system.md  2.3.1-dual-asset-integration.md  3.0-behaviors.md  3.1-implementation.md  4.0-asset-scene-compiler.md  DOCUMENTATION_UPDATE_SUMMARY.md  JSON_SCHEMAS.md  compiler_design.md  prompt.md
docs/avionics/: models.sources.md
docs/flow/: app-flow.md  flowchart.md
docs/methods/: AssetHotReloadSystem.md  AssetPackLoader.md  AssetRegistry.md  BootstrapSystem.md  ConsoleSystem.md  DebugC.md  DroneBuilder.md  Entity.md  EventBus.md  ExponentialAirDensityModel.md  IAirDensityModel.md  ICollisionResolver.md  IComponent.md  IEvent.md  IInputDevice.md  ISystem.md  IVehicleBuilder.md  IWindModel.md  IXmlParser.md  ImpulseCollisionResolver.md  InputEvents.md  InputSystem.md  PerlinWindModel.md  PhysicsSystem.md  PugiXmlParser.md  Quaternion.md  RenderableC.md  SimClock.md  TransformC.md  Vector3D.md  VehicleControlSystem.md  VisualizationSystem.md  WinInputDevice.md  World.md  WorldGenEvents.md  WorldGenSystem.md  main.md
internal_assets/: README.md
internal_assets/core/: config.xml  internal_assets.json  internal_assets.xml
src/: debug.h  main.cpp  main_simple.cpp
src/assets/: AssetCompilerService.cpp  AssetCompilerService.h  AssetRegistry.cpp  AssetRegistry.h  Package.cpp  Package.h  PackageJsonParser.cpp  PackageJsonParser.h  PackageManager.cpp  PackageManager.h  PackageParser.cpp  PackageParser.h  ShaderAsset.cpp  ShaderAsset.h
src/behaviors/: CubeSpinBehavior.cpp  CubeSpinBehavior.h  DebugOverlayBehavior.cpp  DebugOverlayBehavior.h  MovementBehavior.cpp  MovementBehavior.h  SpinBehavior.cpp  SpinBehavior.h
src/components/: AudioC.h  ContrailC.h  DebugC.h  EntityBehavior.h  EntityBehavior_new.h  LightC.h  OrbitalC.h  PhysicsC.h  RenderableC.h  Transform.h  TransformC.h  VehicleC.h  VoxelCloudC.h
src/config/: EntityConfig.h  EntityConfigParser.cpp  EntityConfigParser.h  InputConfig.cpp  InputConfig.h  InputConfigParser.cpp  InputConfigParser.h  PhysicsConfig.h  PhysicsConfigParser.cpp  PhysicsConfigParser.h  RenderConfig.h  RenderConfigParser.cpp  RenderConfigParser.h  SceneConfigParser.cpp  SceneConfigParser.h  SceneConfigParser_old.cpp  SceneConfigParser_simple.cpp  SceneConfigUtils.cpp
src/core/: AssetIds.h  AssetManager.cpp  AssetManager.h  AssetManager_Integration.cpp  AssetPackLoader.cpp  AssetPackLoader.h  AssetRegistry.cpp  AssetRegistry.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EventBus.cpp  EventBus.h  IComponent.h  IEvent.h  ISystem.h  IoContainer.cpp  IoContainer.h  PackageBootstrap.cpp  PackageBootstrap.h  Quaternion.h  SimClock.cpp  SimClock.h  Vector3D.h  World.cpp  World.h
src/events/: InputEvents.h  WorldGenEvents.h
src/factory/: BehaviorRegistry.cpp  BehaviorRegistry.h  EntityComponentInitializer.cpp  EntityFactory.cpp  EntityFactory.h  addEntityComponents.cpp
src/generators/: BasicShaderGenerator.cpp  BasicShaderGenerator.h  CubeGenerator.h  IcoSphereGenerator.h  ProceduralAircraftGenerator.h  ProceduralTextureGenerator.cpp  ProceduralTextureGenerator.h  TerrainGenerator.cpp  TerrainGenerator.h  VoxelMeshGenerator.cpp  VoxelMeshGenerator.h
src/loaders/: EntityXmlParser.cpp  EntityXmlParser.h
src/math/: MathUtils.h  Quaternion.h  Vector3D.h
src/physics/: ExponentialAirDensityModel.cpp  ExponentialAirDensityModel.h  IAirDensityModel.h  ICollisionResolver.h  IWindModel.h  ImpulseCollisionResolver.cpp  ImpulseCollisionResolver.h  PerlinWindModel.cpp  PerlinWindModel.h
src/platform/: IInputDevice.h  IXmlParser.h  NlohmannJsonParser.cpp  NlohmannJsonParser.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRenderer.cpp  OpenGLRenderer.h  PugiXmlParser.cpp  PugiXmlParser.h  PugiXmlParser_new.h  PugiXmlParser_stub.cpp  ShaderCompiler.cpp  ShaderCompiler.h  WinInputDevice.cpp  WinInputDevice.h
test_build/: test_math.cpp
tests/: CMakeLists.txt  behavior_tests.cpp  package_tests.cpp  scene_renderer_test.cpp  simple_scene_test.cpp  simple_test.cpp  test2.cpp  test3.cpp  test_CMakeLists.txt  test_entity.cpp  test_entityconfig.cpp  test_entityfactory.cpp  test_entityfactory_2.h  test_eventbus.cpp  test_materialmanager.cpp  test_math.cpp  test_minimal.cpp  test_world.cpp  test_worldgen.cpp
(+89 files in other folders)
